# mcc.py

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .secrets.baseline  Containerfile  LICENSE.md  README.md  build_container.sh  check_new_ver.sh  command.py  example.py  generate_commands.py  pyproject.toml  requirements-dev.txt  set_pre_release_ver.sh
.github/: dependabot.yml
.github/workflows/: build_and_unittest.yaml  publish.yaml  publish_mcc_container_to_dockerhub.yaml  publish_to_testpypi.yaml  test-report.yaml
chat_bot_code_generation/: chat_bot_template.txt  command_template.txt  doc_parsing_utils.py  generate_chat_bot.py  generate_commands.py  generate_commands_output.json  generate_events.py  generate_events_output.json
command_generation/: command_template.txt  generate_commands.py  generate_commands_output.json
docker/: latest-Containerfile  test-Containerfile
docker/latest/: Containerfile  requirements.txt
docker/shared_files/: MCCRobotLibrary.py  matcher_utils.py
docker/test/: Containerfile  testpypi-requirements.txt
mcc/: ChatBot.py  command.py  mcc.py
mcc/commands/: AuthenticateCommand.py  ChangeSessionIdCommand.py  ChangeSlotCommand.py  ClearInventoriesCommand.py  ClientIsMovingCommand.py  CloseInventoryCommand.py  CreativeDeleteCommand.py  CreativeGiveCommand.py  DigBlockCommand.py  DisconnectAndExitCommand.py  GetCurrentLocationCommand.py  GetCurrentSlotCommand.py  GetEntitiesCommand.py  GetEntityHandlingEnabledCommand.py  GetGamemodeCommand.py  GetInventoriesCommand.py  GetInventoryEnabledCommand.py  GetMaxChatMessageLengthCommand.py  (+35 more)
(+65 files in other folders)
