[project]
name = "mcc.py"
version = "0.0.1"
authors = [
  { name="zorua162", email="zorua162@gmail.com" },
]
description = "Python bindings for controlling the Minecraft Console Client Websocket bot"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["websockets"]

[project.urls]
Homepage = "https://github.com/Zorua162/mcc.py"
Issues = "https://github.com/Zorua162/mcc.py/issues"

[tool.setuptools]
packages = ["mcc"]

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "tests",
    "tests/unit",
    "mcc",
    "mcc/commands"
]
